--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -349,7 +349,7 @@
                     <h4 class="modal-title">{% trans "Fale Conosco" %}</h4>
                 </div>
                 <div class="modal-body">
-                    <p>{% trans "Para entrar em contato com nosso suporte e nossos canais de atendimento, envie um email para <a class='download' hre='mailto:contato@voiservices.com'>contato@voiservices.com</a>. Retornaremos o mais breve possível." %}</p>
+                    <p>{% trans "Para entrar em contato com nosso suporte e nossos canais de atendimento, envie um email para <a class='download' hre='mailto:support@voiservices.com'>support@voiservices.com</a>. Retornaremos o mais breve possível." %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
