--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -131,14 +131,13 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">{% trans "Solicite sua assinatura" %}</h4>
+                    <h4 class="modal-title">{% trans "Acesso à compra de lotes" %}</h4>
                 </div>
                 <div class="modal-body">
                     <p>
                         {% blocktrans %}
-                        Você ainda não é assinante da nossa loja,<br>
-                        solicite seu acesso agora mesmo através do e-mail:
-                        support@voiservices.com
+                        Você está em nossa fila de espera de assinantes.<br>
+                        Assim que liberarmos mais vagas, você receberá um email de notificação.
                         {% endblocktrans %}
                     </p>
                 </div>
