--- a/html/templates/email/basic-template.html
+++ b/html/templates/email/basic-template.html
@@ -15,7 +15,7 @@
         <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Prezado(a)" %} {{ user_name }}</p>
         {{ email_body|safe }}
     </div>
-    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Caso você não reconheça esta ação nos avise através do e-mail" %} <a href="mailto:{% trans 'suporte@voiservices.com' %}">{% trans "suporte@voiservices.com" %}</a>.</small>
+    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Caso você não reconheça esta ação nos avise através do e-mail" %} <a href="mailto:{% trans 'support@voiservices.com' %}">{% trans "support@voiservices.com" %}</a>.</small>
     <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Este é um e-mail automático disparado pelo sistema. Favor não respondê-lo, pois esta conta não é monitorada." %}</small>
 </div>
 
