--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -10,10 +10,10 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header center">Chega de sofrer para achar, comprar e enviar seus produtos, Vendedor Amazon!</h1>
-          <!--<div class="row">
-              <iframe width="100%" height="415" src="https://www.youtube.com/embed/fyaI4-5849w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-           <br /><br /><br />-->
+          <h1 class="page-header center">Uma solução completa desde a compra de produtos até o envio para Amazon</h1>
+          <div class="row">
+            <iframe class="youtube-iframe" src="https://www.youtube.com/embed/gyJW_KUdEq8?autoplay=1&controls=0&modestbranding=1&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+           <br /><br /><br />
            <h3 class="page-header">Veja abaixo um comparativo com os serviços mais utilizados para busca de produtos</h3>
            <div class="col-md-4">
             <div class="box-comparativo-valor">
@@ -29,7 +29,7 @@
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Redirecionamento Grátis</span></li>
                     </ul>
                     <div class="contem-btn-ass">
-                         <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Assine Agora</a>
+                         <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Cadastre-se</a>
                     </div>
                 </div>
             </div>
