--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -102,6 +102,9 @@
                   <div class="col-md-6">
                       <p><strong>{% trans "ROI" %} (%):</strong><br> {{ product.roi|localize }}</p>
                   </div>
+                  <div class="col-md-12">
+                      <p><strong>Observação:</strong><br> Este lote pertence a categoria automotive. Verifique na sua conta se está restrito.<br></p>
+                  </div>
               </div>
               {% endfor %}
           </div>
