--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -36,44 +36,44 @@
 </head>
 
 <body id="page-top" class="cadastro-usuario">
-    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top affix">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
+ <header class="bs-docs-nav navbar navbar-static-top header-sistema header-user" id="top">
+            <div class="navbar-header">
+                <button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
                     <img src="/static/img/logo_sup.png" /><span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span><!--<img src="/static/img/logo_bottom.png" />-->
                 </a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <nav class="collapse navbar-collapse" id="bs-navbar">
                 <ul class="nav navbar-nav navbar-right">
-
                     <li>
-                        <a href="{% url 'login' %}"><strong><i class="fa fa-sign-in"></i></strong> {% trans "Login" %}</a>
+                        <a title="Login" href="/pt/entrar"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
                 </ul>
-            </div>
-        </div>
-    </nav>
+            </nav>
+    </header>
 
     <div class="container">
         <div class="row">
             <div class="col-md-1">
             </div>
             <div class="col-md-4 box-cad-esquerda">
-                <img src="/static/img/imagem-cadastro.png" width="100%" />
+                <img src="/static/img/sale-img.png" width="100%" />
                 <br><br><br>
                 <div class="box-valor">
-                    <p class="seja">{% trans "Seja Assinante por apenas" %}</p>
-                    <p class="assinate-span"><span>U${% trans "54,90" %}</span>{% trans "/mês" %}</p>
-                    <small>{% trans "e tenha acesso a todas as vantagens de ser um assinante VOI Services" %}</small>
+                    <p class="seja">{% trans "Faça seu cadastro para entrar em nossa fila de espera de assinantes. Assim que sua vaga for liberada, você será notificado." %}</p>
+                    <!--<p class="assinate-span">Invista apenas <span>U${% trans "54,90" %}</span>{% trans "/mês" %}</p>
+                    <p>{% trans "Tenha acesso a todas as vantagens de ser um assinante VOI Services" %}</p>-->
                 </div>
-                <br><br>
+
                 <label> {% trans "Leia <a href='/pt/termos-e-condicoes-de-uso.html' class='download'>aqui</a> nossos termos e condições de uso da plataforma." %}</label>
-                <br /><br><br>
+                <br /><br><br><!--
                 <label> {% trans "Se ainda tiver dúvidas, veja nossos tutorias de utilização da plataforma <a href='/pt/ajuda/' class='download'>aqui</a>." %}</label>
-            <br /><br><br>
+            <br /><br><br>-->
                 <label> {% trans "Veja aqui as vantagens de se tornar um assinante <a href='/pt/como-funciona/' class='download'>Clique aqui</a>." %}</label>
 
             </div>
