Ajustes layout e coneudo

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -288,7 +288,7 @@
                     <ul class="list-inline quicklinks">
                         <li>
                             <a href='/pt/termos-e-condicoes-de-uso/'>{% trans "Termos e Condições de Uso" %}</a> |
-                            <a href='/pt/ajuda/'>{% trans "Ajuda" %}</a>
+                            <!--<a href='/pt/ajuda/'>{% trans "Ajuda" %}</a>-->
                         </li>
                     </ul>
                 </div>
