--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -39,12 +39,24 @@
                   {% endif %}
               </div>
           </div>
+          {% if lot.description %}
+          <div class="row">
+              <div class="bs-example" id="lot-alert">
+                 <div class="alert alert-warning">
+                    <strong>{% trans "Fique atento" %}!</strong> {{ lot.description }}.
+                 </div>
+              </div>
+          </div>
+          {% endif %}
           <div class="row">
               <br><h3><i class="fa fa-list-ol"></i> {% trans "Produto(s)" %}</h3><br><br>
               <div class="bs-example" id="alerta-valor-minimo">
                  <div class="alert alert-warning">
+                   {% url 'terms' as terms_url %}
                    {% timezone mytz %}
-                    <strong>Importante!</strong> Os dados apurados abaixo, tais como: <strong>Rank, Valor de Venda, Tarifa FBA, Lucros, etc...</strong> foram apurados dia <strong>{{ lot.create_date|date:'SHORT_DATE_FORMAT' }}</strong>. É imprescindível que o usuário, antes de finalizar a compra, verifique novamente as informações junto a Amazon. Os dados informados abaixo podem sofrer alteração entre a data de apuração e a data de hoje. Caso tenha dúvidas, leia nossos termos <a href="/pt/termos-e-condicoes-de-uso/"><strong>Clicando aqui</strong></a>.
+                    {% blocktrans with lot_create_date=lot.create_date|date:'SHORT_DATE_FORMAT' %}
+                    <strong>Importante!</strong> Os dados apurados abaixo, tais como: <strong>Rank, Valor de Venda, Tarifa FBA, Lucros, etc...</strong> foram apurados dia <strong>{{ lot_create_date }}</strong>. É imprescindível que o usuário, antes de finalizar a compra, verifique novamente as informações junto a Amazon. Os dados informados abaixo podem sofrer alteração entre a data de apuração e a data de hoje. Caso tenha dúvidas, leia nossos termos <a href="{{ terms_url }}"><strong>Clicando aqui</strong></a>.
+                    {% endblocktrans %}
                    {% endtimezone %}
                  </div>
               </div>
@@ -101,9 +113,6 @@
                   </div>
                   <div class="col-md-6">
                       <p><strong>{% trans "ROI" %} (%):</strong><br> {{ product.roi|localize }}</p>
-                  </div>
-                  <div class="col-md-12">
-                      <p><strong>Observação:</strong><br> Este lote pertence a categoria automotive. Verifique na sua conta se está restrito.<br></p>
                   </div>
               </div>
               {% endfor %}
