ajuste de geração da url pela tag do django.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -289,8 +289,8 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href='/pt/termos-e-condicoes-de-uso/'>{% trans "Termos e Condições de Uso" %}</a> |
-                            <!--<a href='/pt/ajuda/'>{% trans "Ajuda" %}</a>-->
+                            <a href="{% url 'terms' %}">{% trans "Termos e Condições de Uso" %}</a> |
+                            <!--<a href="{% url 'help' %}">{% trans "Ajuda" %}</a>-->
                         </li>
                     </ul>
                 </div>
