atualização da imagem do lote sem imagem

--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -108,7 +108,7 @@
                         {% if lot.thumbnail %}
                          <img src="/media/{{ lot.thumbnail }}" />
                         {% else %}
-                         <img src="/static/img/default-no-image.png" />
+                         <img src="/static/img/default-voi.png" />
                         {% endif %}
                      </div>
                      <div class="descricao-lote-prod">
