--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -14,6 +14,7 @@
     </div>
     <div class="container-fluid">
       <div class="row">
+          <form action="" method="get" id="form-filter-store" class="form-filter"></form>
 <!--
         <div class="col-md-2 sidebar">
             <form action="" method="get" id="form-filter-store" class="form-filter">
