adição da qtde de produtos do lote e totalizador na tela de relatorios

--- a/store/templates/admin/store/lotreport/change_list_results.html
+++ b/store/templates/admin/store/lotreport/change_list_results.html
@@ -45,6 +45,7 @@
     <td>{{ cl.voi_cost_sum }}</td>
     <td>{{ cl.voi_profit_sum }}</td>
     <td>{{ cl.voi_roi_sum }}</td>
+    <td>{{ cl.products_quantity_sum }}</td>
 </tr>
 </tbody>
 </table>
