--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -1,5 +1,5 @@
 {% extends 'includes/layout.html' %}
-{% load i18n l10n permissions users commons %}
+{% load i18n l10n permissions users commons lots %}
 {% block storelist %}active{% endblock %}
 
 {% block conteudo %}
@@ -104,7 +104,12 @@
           <div class="row">
           {% endif %}
               <div class="box-container-lote">
+                 {% is_subscriber user lot=lot as is_user_subscriber %}
+                 {% if is_user_subscriber %}
                  <a href="{% url 'store_lot_details' lot.id %}" class="box-lote{% if lot.status == 2 %} vendido{% endif %}">
+                 {% else %}
+                 <a href="#" class="box-lote{% if lot.status == 2 %} vendido{% endif %} not-subscriber">
+                 {% endif %}
                      {% if lot.status == 2 %}
                      <p class="vendido-text">{% trans "Vendido" %}</p>
                      {% endif %}
@@ -157,5 +162,26 @@
         </div>
           <div class="col-md-1"></div>
       </div>
+    </div>
+    <div id="modal-store-subscribe" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">{% trans "Acesso à compra de lotes" %}</h4>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        {% blocktrans %}
+                        Conteúdo somente para assinantes.
+                        {% endblocktrans %}
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <!--<button type="submit" class="btn btn-danger">{% trans "Sim" %}</button>-->
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
