--- a/html/templates/terms.html
+++ b/html/templates/terms.html
@@ -118,9 +118,18 @@
                             &nbsp;</p><p>
                             <strong>14- Dos Problemas de conta suspens pela Amazon</strong></p>
                         <p>O Voi Services não se responsabiliza por eventual bloqueio de conta Amazon dos usuários, mesmo que por motivo de compra dos produtos ofertados em nossa loja.</p>
+
+
+                        <p>
+                            &nbsp;</p><p>
+                            <strong>15- Do Invoice</strong></p>
+                        <p>O Voi Services emite o Invoice dos produtos adquiridos em ate 48 horas após a solcitiacao.</p>
+                        <p></p>
+                        <p><strong>16 - Do Shipping e Delivery:</strong></p>
+                        <p>O Voi services utiliza para o shipping para a Amazon os transportadores homologados pela instituição, que atualmente são Fedex e UPS. Como o Voi Services trabalha com o modelo FBA o Delivery para o cliente final e de responsabilidade direta da Amazon.</p>
                         <p>
                             <br />
-                            <strong>Data de atualiza&ccedil;&atilde;o: </strong>15 de Janeiro de 2018</p>
+                            <strong>Data de atualiza&ccedil;&atilde;o: </strong>26 de Janeiro de 2018</p>
 
                     </div>
                 </div>
@@ -130,3 +139,5 @@
     </section>
 
 {% endblock %}
+
+
