--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1525,7 +1525,15 @@ label.titulo-pct span{
     padding-top: 20px;
 }
 
-
+.btn.link-amz{
+    display: block;
+    margin: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 11px;
+    background: #000;
+    color: #fff;
+}
 
 .produto{
     border: 1px solid #ccc;
