--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -292,11 +292,12 @@
                 <div class="col-md-3"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
                         <img src="/static/img/logo-en-maior.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>-->
+                    <span class="copyright"><strong>{% trans "Endereço" %}:</strong> 920 Lafayette Rd, Seabrook, NH 03874 | <strong>{% trans "Telefone" %}:</strong> 1 978 992 8417</span>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="{% url 'terms' %}">{% trans "Termos e Condições de Uso" %}</a> |
+                            <a href="{% url 'terms' %}">{% trans "Termos e Condições de Uso" %}</a>
                             <!--<a href="{% url 'help' %}">{% trans "Ajuda" %}</a>-->
                         </li>
                     </ul>
