--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -118,7 +118,7 @@
                   </div>
                   <!-- btn link para amazon -->
                   <div class="col-md-12">
-                        <a class="btn btn-default link-amz" href="#"><i class="fa fa-amazon"></i> Veja o Produto na Amazon</a>
+                        <a class="btn btn-default link-amz" target="_blank" href="#"><i class="fa fa-amazon"></i> Veja o Produto na Amazon</a>
                   </div>
               </div>
           {% if forloop.counter|divisibleby:3 or forloop.last %}
