--- a/store/templates/admin/store/lot/change_form.html
+++ b/store/templates/admin/store/lot/change_form.html
@@ -1,8 +1,9 @@
 {% extends "admin/change_form.html" %}
-{% load lots %}
+{% load lots static %}
 
-{% block extrahead %}{{ block.super }}
-<script type="text/javascript" src="/static/js/specifics/store.js"></script>
+{% block extrastyle %}
+{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.min.css' %}" />
 {% endblock %}
 
 {% block submit_buttons_bottom %}{% my_submit_row original %}{% endblock %}
