--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -442,19 +442,19 @@
     <!-- jQuery validate -->
     <script type="text/javascript" src="{% static 'externo/jquery/jquery.validate.min.js' %}"></script>
 
-    <script type="text/javascript" src="{% static 'externo/jquery/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{% static 'externo/jquery/jquery-ui.min.js' %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script type="text/javascript" src="{% static 'externo/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static 'externo/bootstrap/js/bootstrap.min.js' %}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script type="text/javascript" src="{% static 'js/jqBootstrapValidation.js"></script>
+    <script type="text/javascript" src="{% static 'js/jqBootstrapValidation.js' %}"></script>
 
     <!-- Theme JavaScript -->
-    <script type="text/javascript" src="{% static 'js/applications.js"></script>
+    <script type="text/javascript" src="{% static 'js/applications.js' %}"></script>
 
 </body>
 
