faltou colocar as chaves...

--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -119,7 +119,7 @@
                   {% if product.url %}
                   <!-- btn link para amazon -->
                   <div class="col-md-12">
-                        <a class="btn btn-default link-amz" target="_blank" href="product.url"><i class="fa fa-amazon"></i> {% trans 'Veja o Produto na Amazon' %}</a>
+                        <a class="btn btn-default link-amz" target="_blank" href="{{ product.url }}"><i class="fa fa-amazon"></i> {% trans 'Veja o Produto na Amazon' %}</a>
                   </div>
                   {% endif %}
               </div>
