--- a/html/templates/terms.html
+++ b/html/templates/terms.html
@@ -123,8 +123,8 @@
                         <p>
                             &nbsp;</p><p>
                             <strong>15- Do Invoice</strong></p>
-                        <p>O Voi Services emite o Invoice dos produtos adquiridos em ate 48 horas após a solcitiacao.</p>
-                        <p></p>
+                        <p>O Voi Services emite o Invoice dos produtos adquiridos em ate 48 horas após a solcitiação.</p>
+                        <p></p><p></p>
                         <p><strong>16 - Do Shipping e Delivery:</strong></p>
                         <p>O Voi services utiliza para o shipping para a Amazon os transportadores homologados pela instituição, que atualmente são Fedex e UPS. Como o Voi Services trabalha com o modelo FBA o Delivery para o cliente final e de responsabilidade direta da Amazon.</p>
                         <p>
