ajuste para geraçao da url do faq pelo django

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -121,7 +121,7 @@
                     </li>
 
                     <li class="{% block faq %}{% endblock %}">
-                        <a href="/faq" class=""><i class="fa fa-question-circle"></i> {% trans "Perguntas Frequentes" %}</a>
+                        <a href="{% url 'faq' %}" class=""><i class="fa fa-question-circle"></i> {% trans "Perguntas Frequentes" %}</a>
                     </li>
 
                     <li>
